[project]
name = "kazuki_module"
version = "0.1.0"
description = "Kazuki's combined utilities"
requires-python = ">=3.9"
authors = [
    { name="Kazuki Yoshizawa" }
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# PEP621 では packages はここに書く
[tool.setuptools.packages]
find = {}

# find_namespace = true にする場合：
#find = {namespaces = true}
